feat: add admin user when creating the master key
