# gen/http/key_management/server/types.go
@@ -89,6 +89,25 @@ type CreateMasterKeyInvalidParametersResponseBody struct {
 	Fault bool `form:"fault" json:"fault" xml:"fault"`
 }
 
+// CreateMasterKeyInternalErrorResponseBody is the type of the "key_management"
+// service "create_master_key" endpoint HTTP response body for the
+// "internal_error" error.
+type CreateMasterKeyInternalErrorResponseBody struct {
+	// Name is the name of this class of errors.
+	Name string `form:"name" json:"name" xml:"name"`
+	// ID is a unique identifier for this particular occurrence of the problem.
+	ID string `form:"id" json:"id" xml:"id"`
+	// Message is a human-readable explanation specific to this occurrence of the
+	// problem.
+	Message string `form:"message" json:"message" xml:"message"`
+	// Is the error temporary?
+	Temporary bool `form:"temporary" json:"temporary" xml:"temporary"`
+	// Is the error a timeout?
+	Timeout bool `form:"timeout" json:"timeout" xml:"timeout"`
+	// Is the error a server-side fault?
+	Fault bool `form:"fault" json:"fault" xml:"fault"`
+}
+
 // NewCreateMasterKeyResponseBody builds the HTTP response body from the result
 // of the "create_master_key" endpoint of the "key_management" service.
 func NewCreateMasterKeyResponseBody(res *keymanagement.CreateMasterKeyResult) *CreateMasterKeyResponseBody {
@@ -131,6 +150,21 @@ func NewAddShareResponseBody(res *keymanagement.AddShareResult) *AddShareRespons
 // "key_management" service.
 func NewCreateMasterKeyInvalidParametersResponseBody(res *goa.ServiceError) *CreateMasterKeyInvalidParametersResponseBody {
 	body := &CreateMasterKeyInvalidParametersResponseBody{
+		Name:      res.Name,
+		ID:        res.ID,
+		Message:   res.Message,
+		Temporary: res.Temporary,
+		Timeout:   res.Timeout,
+		Fault:     res.Fault,
+	}
+	return body
+}
+
+// NewCreateMasterKeyInternalErrorResponseBody builds the HTTP response body
+// from the result of the "create_master_key" endpoint of the "key_management"
+// service.
+func NewCreateMasterKeyInternalErrorResponseBody(res *goa.ServiceError) *CreateMasterKeyInternalErrorResponseBody {
+	body := &CreateMasterKeyInternalErrorResponseBody{
 		Name:      res.Name,
 		ID:        res.ID,
 		Message:   res.Message,
