# gen/http/openapi.yaml
@@ -47,7 +47,7 @@ paths:
                 "500":
                     description: Internal Server Error response.
                     schema:
-                        type: string
+                        $ref: '#/definitions/KeyManagementCreateMasterKeyInternalErrorResponseBody'
             schemes:
                 - http
     /key_management/share:
@@ -288,18 +288,61 @@ definitions:
             index:
                 type: integer
                 description: The index of the share added
-                example: 4864005717453730110
+                example: 6836499522799983954
                 format: int64
             unlocked:
                 type: boolean
                 description: Whether the master key has been unlocked
-                example: false
+                example: true
         example:
-            index: 7645663036194808677
-            unlocked: false
+            index: 3985364364835542493
+            unlocked: true
         required:
             - index
             - unlocked
+    KeyManagementCreateMasterKeyInternalErrorResponseBody:
+        title: 'Mediatype identifier: application/vnd.goa.error; view=default'
+        type: object
+        properties:
+            fault:
+                type: boolean
+                description: Is the error a server-side fault?
+                example: true
+            id:
+                type: string
+                description: ID is a unique identifier for this particular occurrence of the problem.
+                example: 123abc
+            message:
+                type: string
+                description: Message is a human-readable explanation specific to this occurrence of the problem.
+                example: parameter 'p' must be an integer
+            name:
+                type: string
+                description: Name is the name of this class of errors.
+                example: bad_request
+            temporary:
+                type: boolean
+                description: Is the error temporary?
+                example: true
+            timeout:
+                type: boolean
+                description: Is the error a timeout?
+                example: false
+        description: Internal server error (default view)
+        example:
+            fault: true
+            id: 123abc
+            message: parameter 'p' must be an integer
+            name: bad_request
+            temporary: true
+            timeout: true
+        required:
+            - name
+            - id
+            - message
+            - temporary
+            - timeout
+            - fault
     KeyManagementCreateMasterKeyInvalidParametersResponseBody:
         title: 'Mediatype identifier: application/vnd.goa.error; view=default'
         type: object
@@ -420,27 +463,27 @@ definitions:
             current_shares:
                 type: integer
                 description: Number of shares currently held
-                example: 5372148105612043479
+                example: 6650704053550084319
                 format: int64
             is_locked:
                 type: boolean
                 description: Whether the key is currently locked
-                example: true
+                example: false
             min_shares:
                 type: integer
                 description: Minimum number of shares required
-                example: 6301691789677483758
+                example: 4864005717453730110
                 format: int64
             total_shares:
                 type: integer
                 description: Total number of shares
-                example: 3058226914185531902
+                example: 7698091821871401703
                 format: int64
         example:
-            current_shares: 2687299236987956368
-            is_locked: true
-            min_shares: 4063444925102994977
-            total_shares: 6650704053550084319
+            current_shares: 7280264691809939389
+            is_locked: false
+            min_shares: 5550376517080984471
+            total_shares: 3638475778790626784
         required:
             - is_locked
             - current_shares
@@ -453,19 +496,19 @@ definitions:
             created_at:
                 type: string
                 description: User creation timestamp
-                example: Qui nulla hic molestias esse in.
+                example: Sint asperiores repudiandae deleniti sit rerum eveniet.
             updated_at:
                 type: string
                 description: User last update timestamp
-                example: Sint asperiores repudiandae deleniti sit rerum eveniet.
+                example: Tenetur maxime quasi veniam autem temporibus.
             username:
                 type: string
                 description: The username
-                example: Minima consequatur et tenetur qui et.
+                example: Esse in.
         example:
-            created_at: Cum ipsum tenetur blanditiis est pariatur.
-            updated_at: Laborum ratione minima.
-            username: Tenetur maxime quasi veniam autem temporibus.
+            created_at: Laborum ratione minima.
+            updated_at: Et quis vel reiciendis.
+            username: Cum ipsum tenetur blanditiis est pariatur.
         required:
             - username
             - created_at
@@ -493,18 +536,18 @@ definitions:
             temporary:
                 type: boolean
                 description: Is the error temporary?
-                example: true
+                example: false
             timeout:
                 type: boolean
                 description: Is the error a timeout?
-                example: false
+                example: true
         description: Invalid input (default view)
         example:
-            fault: false
+            fault: true
             id: 123abc
             message: parameter 'p' must be an integer
             name: bad_request
-            temporary: false
+            temporary: true
             timeout: true
         required:
             - name
@@ -538,14 +581,14 @@ definitions:
             token:
                 type: string
                 description: JWT or session token
-                example: Nisi voluptatem consequatur.
+                example: Natus aliquam laborum illo impedit debitis.
             username:
                 type: string
                 description: The username of the authenticated user
-                example: Ipsa debitis voluptatum non ducimus.
+                example: Natus nisi voluptatem consequatur sint.
         example:
-            token: Consequatur autem ut necessitatibus dolor.
-            username: Asperiores natus aliquam laborum illo impedit debitis.
+            token: Aut ratione.
+            username: Consequatur autem ut necessitatibus dolor.
     UsersAuthUserUnauthorizedResponseBody:
         title: 'Mediatype identifier: application/vnd.goa.error; view=default'
         type: object
@@ -553,7 +596,7 @@ definitions:
             fault:
                 type: boolean
                 description: Is the error a server-side fault?
-                example: false
+                example: true
             id:
                 type: string
                 description: ID is a unique identifier for this particular occurrence of the problem.
@@ -573,14 +616,14 @@ definitions:
             timeout:
                 type: boolean
                 description: Is the error a timeout?
-                example: true
+                example: false
         description: Invalid username or password (default view)
         example:
-            fault: true
+            fault: false
             id: 123abc
             message: parameter 'p' must be an integer
             name: bad_request
-            temporary: false
+            temporary: true
             timeout: false
         required:
             - name
@@ -612,11 +655,11 @@ definitions:
             temporary:
                 type: boolean
                 description: Is the error temporary?
-                example: true
+                example: false
             timeout:
                 type: boolean
                 description: Is the error a timeout?
-                example: false
+                example: true
         description: Invalid input (default view)
         example:
             fault: true
@@ -624,7 +667,7 @@ definitions:
             message: parameter 'p' must be an integer
             name: bad_request
             temporary: true
-            timeout: false
+            timeout: true
         required:
             - name
             - id
@@ -654,12 +697,18 @@ definitions:
         title: UsersCreateUserResponseBody
         type: object
         properties:
+            id:
+                type: integer
+                description: Unique identifier for the user
+                example: 1828035163576775677
+                format: int64
             username:
                 type: string
                 description: The username of the created user
-                example: Dignissimos error.
+                example: Necessitatibus sint accusamus perferendis.
         example:
-            username: Et maxime impedit necessitatibus.
+            id: 5475002864767066459
+            username: Aut hic maiores officia eum.
     UsersCreateUserUsernameTakenResponseBody:
         title: 'Mediatype identifier: application/vnd.goa.error; view=default'
         type: object
@@ -687,15 +736,15 @@ definitions:
             timeout:
                 type: boolean
                 description: Is the error a timeout?
-                example: true
+                example: false
         description: Username already exists (default view)
         example:
             fault: false
             id: 123abc
             message: parameter 'p' must be an integer
             name: bad_request
-            temporary: false
-            timeout: true
+            temporary: true
+            timeout: false
         required:
             - name
             - id
@@ -730,14 +779,14 @@ definitions:
             timeout:
                 type: boolean
                 description: Is the error a timeout?
-                example: false
+                example: true
         description: User not found (default view)
         example:
-            fault: true
+            fault: false
             id: 123abc
             message: parameter 'p' must be an integer
             name: bad_request
-            temporary: false
+            temporary: true
             timeout: false
         required:
             - name
